@@ -31,10 +31,6 @@ tasks {
     }
 }
 
-tasks.named<Test>("test") {
-    jvmArgs = listOf("--enable-preview")
-}
-
 graalvmNative {
     toolchainDetection = false
     metadataRepository {
